%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!91 &9100000
AnimatorController:
  m_ObjectHideFlags: 0
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: ShadowAnimator
  serializedVersion: 2
  m_AnimatorParameters:
  - m_Name: Speed
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Running
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Vertical Speed
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: In Air
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Attack
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Dying
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 3
    m_Name: Base Layer
    m_StateMachine: {fileID: 110732744}
    m_Mask: {fileID: 0}
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_StateMachineMotionSetIndex: 0
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!1101 &110100484
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110291548}
  m_DstState: {fileID: 110286028}
  m_TransitionDuration: .25
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: Vertical Speed
    m_EventTreshold: 0
    m_ExitTime: 1
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110101670
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110286028}
  m_DstState: {fileID: 110234508}
  m_TransitionDuration: 0
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Running
    m_EventTreshold: 0
    m_ExitTime: 1
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110105234
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110286028}
  m_DstState: {fileID: 110255978}
  m_TransitionDuration: 0
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 4
    m_ConditionEvent: Speed
    m_EventTreshold: .100000001
    m_ExitTime: 1
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110108012
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110268142}
  m_DstState: {fileID: 110282096}
  m_TransitionDuration: 0
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: In Air
    m_EventTreshold: 0
    m_ExitTime: 1
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110111930
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110208448}
  m_DstState: {fileID: 110268142}
  m_TransitionDuration: 0
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: Attack
    m_EventTreshold: 0
    m_ExitTime: 1
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110113890
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 110268142}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: In Air
    m_EventTreshold: 0
    m_ExitTime: .899999976
  - m_ConditionMode: 2
    m_ConditionEvent: Dying
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110114194
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110234508}
  m_DstState: {fileID: 110235392}
  m_TransitionDuration: 0
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: Vertical Speed
    m_EventTreshold: 0
    m_ExitTime: 1
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110124814
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110240006}
  m_DstState: {fileID: 110255978}
  m_TransitionDuration: 0
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 3
    m_ConditionEvent: Speed
    m_EventTreshold: 0
    m_ExitTime: 1
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110126894
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110255978}
  m_DstState: {fileID: 110240006}
  m_TransitionDuration: 0
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: Speed
    m_EventTreshold: .100000001
    m_ExitTime: 1
  - m_ConditionMode: 4
    m_ConditionEvent: Speed
    m_EventTreshold: .100000001
    m_ExitTime: 1
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110128676
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 110208448}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 3
    m_ConditionEvent: Vertical Speed
    m_EventTreshold: 0
    m_ExitTime: .899999976
  - m_ConditionMode: 2
    m_ConditionEvent: Dying
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110131690
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110208448}
  m_DstState: {fileID: 110282096}
  m_TransitionDuration: 0
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: In Air
    m_EventTreshold: 0
    m_ExitTime: 1
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110142906
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110235392}
  m_DstState: {fileID: 110291548}
  m_TransitionDuration: 0
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: Running
    m_EventTreshold: 0
    m_ExitTime: 1
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110146452
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 110232688}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Dying
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110150352
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110227532}
  m_DstState: {fileID: 110240006}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: Attack
    m_EventTreshold: 0
    m_ExitTime: 1
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110156402
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110282096}
  m_DstState: {fileID: 110240006}
  m_TransitionDuration: .25
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: Attack
    m_EventTreshold: 0
    m_ExitTime: 1
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110163382
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 110227532}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Attack
    m_EventTreshold: 0
    m_ExitTime: .899999976
  - m_ConditionMode: 2
    m_ConditionEvent: Dying
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110166570
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110255978}
  m_DstState: {fileID: 110286028}
  m_TransitionDuration: 0
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: Running
    m_EventTreshold: 0
    m_ExitTime: 1
  - m_ConditionMode: 3
    m_ConditionEvent: Speed
    m_EventTreshold: 0
    m_ExitTime: 1
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1102 &110208448
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: jump_init
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: ddd66ea7262c34d42b29652526b4bb2d, type: 2}
  m_ParentStateMachine: {fileID: 110732744}
  m_Position: {x: -264, y: -228, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110227532
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: attack
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 1268196c89b28e344aa9396620cb01aa, type: 2}
  m_ParentStateMachine: {fileID: 110732744}
  m_Position: {x: -264, y: -456, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110232688
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: die
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 18366b53ffd847c469b0b3ecb7ced19d, type: 2}
  m_ParentStateMachine: {fileID: 110732744}
  m_Position: {x: -528, y: -348, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110234508
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: walk_transition_run
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 847731187c7629e4d97b4c269cbe7bb7, type: 2}
  m_ParentStateMachine: {fileID: 110732744}
  m_Position: {x: 480, y: -168, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110235392
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: run_repeat
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 847731187c7629e4d97b4c269cbe7bb7, type: 2}
  m_ParentStateMachine: {fileID: 110732744}
  m_Position: {x: 648, y: -84, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110240006
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: idle
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: ee7b830916d9b8a48a42102b1d21fba6, type: 2}
  m_ParentStateMachine: {fileID: 110732744}
  m_Position: {x: 12, y: -84, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110255978
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: walk_init
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 847731187c7629e4d97b4c269cbe7bb7, type: 2}
  m_ParentStateMachine: {fileID: 110732744}
  m_Position: {x: 144, y: 0, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110268142
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: jump_repeat
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 64d52511560e96444850b66815506ec6, type: 2}
  m_ParentStateMachine: {fileID: 110732744}
  m_Position: {x: 12, y: -348, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110282096
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: jump_end
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 64d52511560e96444850b66815506ec6, type: 2}
  m_ParentStateMachine: {fileID: 110732744}
  m_Position: {x: 12, y: -228, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110286028
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: walk_repeat
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 847731187c7629e4d97b4c269cbe7bb7, type: 2}
  m_ParentStateMachine: {fileID: 110732744}
  m_Position: {x: 288, y: -84, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110291548
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: run_transition_walk
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 847731187c7629e4d97b4c269cbe7bb7, type: 2}
  m_ParentStateMachine: {fileID: 110732744}
  m_Position: {x: 480, y: 0, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1107 &110732744
StateMachine:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Base Layer
  m_DefaultState: {fileID: 110240006}
  m_States:
  - {fileID: 110240006}
  - {fileID: 110255978}
  - {fileID: 110286028}
  - {fileID: 110234508}
  - {fileID: 110235392}
  - {fileID: 110291548}
  - {fileID: 110208448}
  - {fileID: 110282096}
  - {fileID: 110268142}
  - {fileID: 110227532}
  - {fileID: 110232688}
  m_ChildStateMachine: []
  m_ChildStateMachinePosition: []
  m_OrderedTransitions:
    data:
      first: {fileID: 0}
      second:
      - {fileID: 110128676}
      - {fileID: 110113890}
      - {fileID: 110146452}
      - {fileID: 110163382}
    data:
      first: {fileID: 110240006}
      second:
      - {fileID: 110124814}
    data:
      first: {fileID: 110255978}
      second:
      - {fileID: 110166570}
      - {fileID: 110126894}
    data:
      first: {fileID: 110286028}
      second:
      - {fileID: 110105234}
      - {fileID: 110101670}
    data:
      first: {fileID: 110234508}
      second:
      - {fileID: 110114194}
    data:
      first: {fileID: 110235392}
      second:
      - {fileID: 110142906}
    data:
      first: {fileID: 110291548}
      second:
      - {fileID: 110100484}
    data:
      first: {fileID: 110208448}
      second:
      - {fileID: 110111930}
      - {fileID: 110131690}
    data:
      first: {fileID: 110282096}
      second:
      - {fileID: 110156402}
    data:
      first: {fileID: 110268142}
      second:
      - {fileID: 110108012}
    data:
      first: {fileID: 110227532}
      second:
      - {fileID: 110150352}
    data:
      first: {fileID: 110232688}
      second: []
  m_MotionSetCount: 1
  m_AnyStatePosition: {x: -240, y: -336, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
